CSCEXAM-750 allow showing external reservations in report